--- a/src/components/tabMaker.scss
+++ b/src/components/tabMaker.scss
@@ -2,9 +2,9 @@
     display: grid;
     grid-template-areas: 
         "fretboard"
-        "controller"
         "tab";
     grid-auto-rows: min-content min-content min-content;
+    max-width: 1400px;
     min-height: 100%;
     height: 100vh;
     padding: 1rem;
