--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@ body {
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-    background-color: #CBD5E1;
+    background-color: #F1F5F9;
 }
 
 code {
